// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table examples Key value table with banded rows should render correctly 1`] = `
<div>
  <table
    class="v-table v-table-alt v-table-key-value"
  >
    <caption
      class="v-screen-reader"
    >
      Table with banded key-value pairs.
    </caption>
    <tbody>
      <tr>
        <th
          class="v-td"
          scope="row"
        >
          Key 1
        </th>
        <td
          class="v-td"
        >
          Value 1
        </td>
      </tr>
      <tr>
        <th
          class="v-td"
          scope="row"
        >
          Key 2
        </th>
        <td
          class="v-td"
        >
          Value 2
        </td>
      </tr>
      <tr>
        <th
          class="v-td"
          scope="row"
        >
          Key 3
        </th>
        <td
          class="v-td"
        >
          Value 3
        </td>
      </tr>
      <tr>
        <th
          class="v-td"
          scope="row"
        >
          Key 4
        </th>
        <td
          class="v-td"
        >
          Value 4
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table examples Key value table with lined rows should render correctly 1`] = `
<div>
  <div
    class="v-table-wrapper"
  >
    <table
      class="v-table v-table-border v-table-key-value"
    >
      <caption
        class="v-screen-reader"
      >
        Table with lined key-value pairs.
      </caption>
      <tbody>
        <tr>
          <th
            class="v-td"
            scope="row"
          >
            Key 1
          </th>
          <td
            class="v-td"
          >
            Value 1
          </td>
        </tr>
        <tr>
          <th
            class="v-td"
            scope="row"
          >
            Key 2
          </th>
          <td
            class="v-td"
          >
            Value 2
          </td>
        </tr>
        <tr>
          <th
            class="v-td"
            scope="row"
          >
            Key 3
          </th>
          <td
            class="v-td"
          >
            Value 3
          </td>
        </tr>
        <tr>
          <th
            class="v-td"
            scope="row"
          >
            Key 4
          </th>
          <td
            class="v-td"
          >
            Value 4
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table examples Large padding table with banded rows should render correctly 1`] = `
<div>
  <table
    class="v-table v-table-alt"
    style="--v-table-data-padding-block-default: var(--v-table-data-padding-block-large); --v-table-data-block-default: var(--v-table-data-block-large);"
  >
    <caption
      class="v-screen-reader"
    >
      Table with large padding and banded rows.
    </caption>
    <thead>
      <tr>
        <th
          class="v-th"
          scope="col"
        >
          Column A
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column B
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column C
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column D
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="v-td"
        >
          A1
        </td>
        <td
          class="v-td"
        >
          B1
        </td>
        <td
          class="v-td"
        >
          C1
        </td>
        <td
          class="v-td"
        >
          D1
        </td>
      </tr>
      <tr>
        <td
          class="v-td"
        >
          A2
        </td>
        <td
          class="v-td"
        >
          B2
        </td>
        <td
          class="v-td"
        >
          C2
        </td>
        <td
          class="v-td"
        >
          D2
        </td>
      </tr>
      <tr>
        <td
          class="v-td"
        >
          A3
        </td>
        <td
          class="v-td"
        >
          B3
        </td>
        <td
          class="v-td"
        >
          C3
        </td>
        <td
          class="v-td"
        >
          D3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table examples Medium padding table with banded rows should render correctly 1`] = `
<div>
  <table
    class="v-table v-table-alt"
  >
    <caption
      class="v-screen-reader"
    >
      Table with medium padding and banded rows.
    </caption>
    <thead>
      <tr>
        <th
          class="v-th"
          scope="col"
        >
          Column A
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column B
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column C
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column D
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="v-td"
        >
          A1
        </td>
        <td
          class="v-td"
        >
          B1
        </td>
        <td
          class="v-td"
        >
          C1
        </td>
        <td
          class="v-td"
        >
          D1
        </td>
      </tr>
      <tr>
        <td
          class="v-td"
        >
          A2
        </td>
        <td
          class="v-td"
        >
          B2
        </td>
        <td
          class="v-td"
        >
          C2
        </td>
        <td
          class="v-td"
        >
          D2
        </td>
      </tr>
      <tr>
        <td
          class="v-td"
        >
          A3
        </td>
        <td
          class="v-td"
        >
          B3
        </td>
        <td
          class="v-td"
        >
          C3
        </td>
        <td
          class="v-td"
        >
          D3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table examples Small padding table with banded rows should render correctly 1`] = `
<div>
  <table
    class="v-table v-table-alt"
    style="--v-table-data-padding-block-default: var(--v-table-data-padding-block-small); --v-table-data-block-default: var(--v-table-data-block-small);"
  >
    <caption
      class="v-screen-reader"
    >
      Table with compact padding and banded rows.
    </caption>
    <thead>
      <tr>
        <th
          class="v-th"
          scope="col"
        >
          Column A
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column B
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column C
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column D
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="v-td"
        >
          A1
        </td>
        <td
          class="v-td"
        >
          B1
        </td>
        <td
          class="v-td"
        >
          C1
        </td>
        <td
          class="v-td"
        >
          D1
        </td>
      </tr>
      <tr>
        <td
          class="v-td"
        >
          A2
        </td>
        <td
          class="v-td"
        >
          B2
        </td>
        <td
          class="v-td"
        >
          C2
        </td>
        <td
          class="v-td"
        >
          D2
        </td>
      </tr>
      <tr>
        <td
          class="v-td"
        >
          A3
        </td>
        <td
          class="v-td"
        >
          B3
        </td>
        <td
          class="v-td"
        >
          C3
        </td>
        <td
          class="v-td"
        >
          D3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table examples Table with group headers should render correctly 1`] = `
<div>
  <table
    class="v-table v-table-border"
  >
    <caption
      class="v-screen-reader"
    >
      Table with group headers.
    </caption>
    <thead>
      <tr
        class="v-typography-overline"
      >
        <th
          class="v-th v-th-alt"
          colspan="2"
        >
          Group header 1
        </th>
        <th
          class="v-th v-th-alt"
          colspan="2"
        >
          Group header 2
        </th>
      </tr>
      <tr>
        <th
          class="v-th"
          scope="col"
        >
          Column A
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column B
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column C
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column D
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="v-td"
        >
          A1
        </td>
        <td
          class="v-td"
        >
          B1
        </td>
        <td
          class="v-td"
        >
          C1
        </td>
        <td
          class="v-td"
        >
          D1
        </td>
      </tr>
      <tr>
        <td
          class="v-td"
        >
          A2
        </td>
        <td
          class="v-td"
        >
          B2
        </td>
        <td
          class="v-td"
        >
          C2
        </td>
        <td
          class="v-td"
        >
          D2
        </td>
      </tr>
      <tr>
        <td
          class="v-td"
        >
          A3
        </td>
        <td
          class="v-td"
        >
          B3
        </td>
        <td
          class="v-td"
        >
          C3
        </td>
        <td
          class="v-td"
        >
          D3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table examples Table with group headers with empty cell should render correctly 1`] = `
<div>
  <table
    class="v-table v-table-border"
  >
    <caption
      class="v-screen-reader"
    >
      Table with group headers and an empty cell.
    </caption>
    <thead>
      <tr
        class="v-typography-overline"
      >
        <td
          class="v-th v-th-alt"
        />
        <th
          class="v-th v-th-alt"
          colspan="1"
        >
          Group header 1
        </th>
        <th
          class="v-th v-th-alt"
          colspan="1"
        >
          Group header 2
        </th>
      </tr>
      <tr>
        <th
          class="v-th"
          scope="col"
        >
          Column A
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column B
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column C
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="v-td"
        >
          A1
        </td>
        <td
          class="v-td"
        >
          B1
        </td>
        <td
          class="v-td"
        >
          C1
        </td>
      </tr>
      <tr>
        <td
          class="v-td"
        >
          A2
        </td>
        <td
          class="v-td"
        >
          B2
        </td>
        <td
          class="v-td"
        >
          C2
        </td>
      </tr>
      <tr>
        <td
          class="v-td"
        >
          A3
        </td>
        <td
          class="v-td"
        >
          B3
        </td>
        <td
          class="v-td"
        >
          C3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table examples Table with lined rows should render correctly 1`] = `
<div>
  <table
    class="v-table v-table-border-block"
  >
    <caption
      class="v-screen-reader"
    >
      Table with lined rows.
    </caption>
    <thead>
      <tr>
        <th
          class="v-th"
          scope="col"
        >
          Column A
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column B
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column C
        </th>
        <th
          class="v-th"
          scope="col"
        >
          Column D
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="v-td"
        >
          A1
        </td>
        <td
          class="v-td"
        >
          B1
        </td>
        <td
          class="v-td"
        >
          C1
        </td>
        <td
          class="v-td"
        >
          D1
        </td>
      </tr>
      <tr>
        <td
          class="v-td"
        >
          A2
        </td>
        <td
          class="v-td"
        >
          B2
        </td>
        <td
          class="v-td"
        >
          C2
        </td>
        <td
          class="v-td"
        >
          D2
        </td>
      </tr>
      <tr>
        <td
          class="v-td"
        >
          A3
        </td>
        <td
          class="v-td"
        >
          B3
        </td>
        <td
          class="v-td"
        >
          C3
        </td>
        <td
          class="v-td"
        >
          D3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table examples Table with outer border and subtle headers should render correctly 1`] = `
<div>
  <div
    class="v-table-wrapper"
  >
    <table
      class="v-table v-table-border v-table-subtle"
    >
      <caption
        class="v-screen-reader"
      >
        Table with outer borders and subtle headers.
      </caption>
      <thead>
        <tr>
          <th
            class="v-th"
            scope="col"
          >
            Column A
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column B
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column C
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column D
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="v-td"
          >
            A1
          </td>
          <td
            class="v-td"
          >
            B1
          </td>
          <td
            class="v-td"
          >
            C1
          </td>
          <td
            class="v-td"
          >
            D1
          </td>
        </tr>
        <tr>
          <td
            class="v-td"
          >
            A2
          </td>
          <td
            class="v-td"
          >
            B2
          </td>
          <td
            class="v-td"
          >
            C2
          </td>
          <td
            class="v-td"
          >
            D2
          </td>
        </tr>
        <tr>
          <td
            class="v-td"
          >
            A3
          </td>
          <td
            class="v-td"
          >
            B3
          </td>
          <td
            class="v-td"
          >
            C3
          </td>
          <td
            class="v-td"
          >
            D3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table examples Table with outer border, column, and row dividers should render correctly 1`] = `
<div>
  <div
    class="v-table-wrapper"
  >
    <table
      class="v-table v-table-border"
    >
      <caption
        class="v-screen-reader"
      >
        Table with outer borders on column and row dividers.
      </caption>
      <thead>
        <tr>
          <th
            class="v-th"
            scope="col"
          >
            Column A
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column B
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column C
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column D
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="v-td"
          >
            A1
          </td>
          <td
            class="v-td"
          >
            B1
          </td>
          <td
            class="v-td"
          >
            C1
          </td>
          <td
            class="v-td"
          >
            D1
          </td>
        </tr>
        <tr>
          <td
            class="v-td"
          >
            A2
          </td>
          <td
            class="v-td"
          >
            B2
          </td>
          <td
            class="v-td"
          >
            C2
          </td>
          <td
            class="v-td"
          >
            D2
          </td>
        </tr>
        <tr>
          <td
            class="v-td"
          >
            A3
          </td>
          <td
            class="v-td"
          >
            B3
          </td>
          <td
            class="v-td"
          >
            C3
          </td>
          <td
            class="v-td"
          >
            D3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table examples Table with scrollbars and banded rows should render correctly 1`] = `
<div>
  <div
    class="v-table-wrapper"
    style="--v-table-wrapper-block-size: 288px; --v-table-wrapper-inline-size: 576px;"
    tabindex="0"
  >
    <table
      class="v-table v-table-alt"
    >
      <caption
        class="v-screen-reader"
      >
        Table with extra data added to demo scrollable content.
      </caption>
      <thead>
        <tr>
          <th
            class="v-th"
            scope="col"
          >
            Column A
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column B
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column C
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column D
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column E
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column F
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column G
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column H
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column I
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column J
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column K
          </th>
          <th
            class="v-th"
            scope="col"
          >
            Column L
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="v-td"
          >
            A1
          </td>
          <td
            class="v-td"
          >
            B1
          </td>
          <td
            class="v-td"
          >
            C1
          </td>
          <td
            class="v-td"
          >
            D1
          </td>
          <td
            class="v-td"
          >
            E1
          </td>
          <td
            class="v-td"
          >
            F1
          </td>
          <td
            class="v-td"
          >
            G1
          </td>
          <td
            class="v-td"
          >
            H1
          </td>
          <td
            class="v-td"
          >
            I1
          </td>
          <td
            class="v-td"
          >
            J1
          </td>
          <td
            class="v-td"
          >
            K1
          </td>
          <td
            class="v-td"
          >
            L1
          </td>
        </tr>
        <tr>
          <td
            class="v-td"
          >
            A2
          </td>
          <td
            class="v-td"
          >
            B2
          </td>
          <td
            class="v-td"
          >
            C2
          </td>
          <td
            class="v-td"
          >
            D2
          </td>
          <td
            class="v-td"
          >
            E2
          </td>
          <td
            class="v-td"
          >
            F2
          </td>
          <td
            class="v-td"
          >
            G2
          </td>
          <td
            class="v-td"
          >
            H2
          </td>
          <td
            class="v-td"
          >
            I2
          </td>
          <td
            class="v-td"
          >
            J2
          </td>
          <td
            class="v-td"
          >
            K2
          </td>
          <td
            class="v-td"
          >
            L2
          </td>
        </tr>
        <tr>
          <td
            class="v-td"
          >
            A3
          </td>
          <td
            class="v-td"
          >
            B3
          </td>
          <td
            class="v-td"
          >
            C3
          </td>
          <td
            class="v-td"
          >
            D3
          </td>
          <td
            class="v-td"
          >
            E3
          </td>
          <td
            class="v-td"
          >
            F3
          </td>
          <td
            class="v-td"
          >
            G3
          </td>
          <td
            class="v-td"
          >
            H3
          </td>
          <td
            class="v-td"
          >
            I3
          </td>
          <td
            class="v-td"
          >
            J3
          </td>
          <td
            class="v-td"
          >
            K3
          </td>
          <td
            class="v-td"
          >
            L3
          </td>
        </tr>
        <tr>
          <td
            class="v-td"
          >
            A4
          </td>
          <td
            class="v-td"
          >
            B4
          </td>
          <td
            class="v-td"
          >
            C4
          </td>
          <td
            class="v-td"
          >
            D4
          </td>
          <td
            class="v-td"
          >
            E4
          </td>
          <td
            class="v-td"
          >
            F4
          </td>
          <td
            class="v-td"
          >
            G4
          </td>
          <td
            class="v-td"
          >
            H4
          </td>
          <td
            class="v-td"
          >
            I4
          </td>
          <td
            class="v-td"
          >
            J4
          </td>
          <td
            class="v-td"
          >
            K4
          </td>
          <td
            class="v-td"
          >
            L4
          </td>
        </tr>
        <tr>
          <td
            class="v-td"
          >
            A5
          </td>
          <td
            class="v-td"
          >
            B5
          </td>
          <td
            class="v-td"
          >
            C5
          </td>
          <td
            class="v-td"
          >
            D5
          </td>
          <td
            class="v-td"
          >
            E5
          </td>
          <td
            class="v-td"
          >
            F5
          </td>
          <td
            class="v-td"
          >
            G5
          </td>
          <td
            class="v-td"
          >
            H5
          </td>
          <td
            class="v-td"
          >
            I5
          </td>
          <td
            class="v-td"
          >
            J5
          </td>
          <td
            class="v-td"
          >
            K5
          </td>
          <td
            class="v-td"
          >
            L5
          </td>
        </tr>
        <tr>
          <td
            class="v-td"
          >
            A6
          </td>
          <td
            class="v-td"
          >
            B6
          </td>
          <td
            class="v-td"
          >
            C6
          </td>
          <td
            class="v-td"
          >
            D6
          </td>
          <td
            class="v-td"
          >
            E6
          </td>
          <td
            class="v-td"
          >
            F6
          </td>
          <td
            class="v-td"
          >
            G6
          </td>
          <td
            class="v-td"
          >
            H6
          </td>
          <td
            class="v-td"
          >
            I6
          </td>
          <td
            class="v-td"
          >
            J6
          </td>
          <td
            class="v-td"
          >
            K6
          </td>
          <td
            class="v-td"
          >
            L6
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
